# openlane2

./: .Changelog-dev.md  .coveragerc  .coveragerc-steps  .dockerignore  .flake8  .gitattributes  .gitignore  .gitmodules  .mypy.ini  .readthedocs.yml  Authors.md  Changelog.md  Makefile  Readme.md  cache_shell.sh  config_md_to_py.rb  default.nix  docker.nix  flake.nix  notebook.ipynb  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_docs.txt  requirements_lint.txt  setup.py  shell.nix
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/scripts/: compare_main.js  compare_metrics.js  determine_test_set.py  generate_tag.py  get_latest_metrics.py  gh.py  post_metrics.js  (+1 more)
designs/: .gitignore  confirmed.txt
docs/: .gitignore  Makefile  png_to_webp.py  requirements.txt
examples/: .gitignore
nix/: Readme.md  cace.nix  colab-env.nix  create-docker.nix  create-shell.nix  default.nix  docker.nix  eqy.nix  gitignore.nix  ioplace-parser.nix  klayout-pymod.nix  klayout-python.nix  klayout.nix  libparse.nix  mach.nix  magic.nix  netgen.nix  ngspice.nix  ol-python.nix  openroad-abc.nix  openroad.nix  opensta.nix  or-abc.nix  or-tools.nix  or-tools_9_11.nix  overlay.nix  pkgs.nix  sby.nix  slugify.nix  sphinx-subfigure.nix  sphinx-tippy.nix  surelog.nix  tclFull.nix  tk-x11.nix  verilator.nix  volare.nix  xschem.nix  yamlcore.nix  yosys-abc.nix  yosys-eqy.nix  (+6 more)
openlane/: __init__.py  __main__.py  __version__.py  common.py  container.py  env_info.py  flow.py  logging.py  open_pdks_rev  plugins.py
test/: __init__.py  conftest.py
type_stubs/: IPython.display.pyi  libparse.pyi  libyosys.pyi  pyosys.pyi  yamlcore.pyi
(+465 files in other folders)
